--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,18 +2,47 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 70%
+    right: 75%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 45%
+    right: 90%
+  &-3
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 78%
+    right: 42%
+  &-4
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 40%
+    right: 10%
+  &-5
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 15%
+    right: 34%
 
 
 @keyframes float1
   0%
-    transform: translateY(20px)
+    transform: translateY(10px)
 
   100%
     transform: translateY(0px)
+
+.tema1
+  .tabla-a.color-acento-contenido
+    th
+      background-color: $color-acento-contenido
+  .img-infografica-b__modal__btn-cerrar
+    i
+      color: $color-secundario
+  .img-infografica-b__modal
+    background-color: #FFFFFF
+    border: 4px solid $color-secundario
+    border-radius: 10px
+    p 
+      color: #000000 !important
