--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -33,7 +33,7 @@
   100%
     transform: translateY(0px)
 
-.tema1
+.tema1,.tema2,.tema3,.tema4
   .tabla-a.color-acento-contenido
     th
       background-color: $color-acento-contenido
@@ -46,3 +46,15 @@
     border-radius: 10px
     p 
       color: #000000 !important
+  .tabla-a.color-acento-contenido
+    td
+      vertical-align: top
+      
+.tema5
+  .clr-paleCyan
+    background-color: lighten($color-primario, 30%)
+  .tabs-a__tab
+    background-color: $color-sistema-f
+  .tabla-a.color-acento-contenido
+    td
+      vertical-align: top
